--- a/cycle.html
+++ b/cycle.html
@@ -25,8 +25,11 @@
     <br />
     Not gonna lie  i really dont have a favorite song it only depends on my mood but if i was obliged to listen to only one for now it would  be feel this moment by pitbull it s kind of nostalgic
     <ul><li>Now here is my E-mail:yassinebelkaid123@gmail.com</li>
-        and you can right me some notes in here    <br /><label for="notes">Notes</label>
-        <input type="text" id="name" value="Your notes" />
+       <br /><label for="notes">E mail</label>
+      <input type="text" id="EMAIL" value="" />
+      <label for="nom">name</label>
+    <input type="text" id="name" value="" />
+    
         <button type="submit">send</button>
     </ul>
 
