--- a/cycle.html
+++ b/cycle.html
@@ -7,31 +7,35 @@
   </head>
   <body>
     <h1>Who am i?</h1>
-    <p><h6> Hi my name is Yassine Belkaid .You are probably wondering who i am .In the previous year i did my baccalaureate and i've got it with 
-        a very good grade and this year i m taking one year off  so i can have more time with
-        my self and discover new things about me and currently i m studying in
-        GoMycode so i can know more about web devolopment and hopefully i ll
-        become one  myself</h6>
-
-     
+    <p>
+      Hi my name is Yassine Belkaid .You are probably wondering who i am .In the
+      previous year i did my baccalaureate and i've got it with a very good
+      grade and this year i m taking one year off so i can have more time with
+      my self and discover new things about me and currently i m studying in
+      GoMycode so i can know more about web devolopment and hopefully i ll
+      become one myself
     </p>
     <ul>
-        <li>In order to get to know each other more here is a picture of mine
-
-        </li>
+      <li>In order to get to know each other more here is a picture of mine</li>
     </ul>
     <br />
-    <img src="https://instagram.ftun14-1.fna.fbcdn.net/v/t1.15752-9/466830003_2871089346387624_2459145612872455531_n.png?stp=dst-png_s640x640&_nc_cat=108&ccb=1-7&_nc_sid=0024fc&_nc_ohc=y8gna7B1PCAQ7kNvgFtBg7H&_nc_zt=23&_nc_ht=instagram.ftun14-1.fna&oh=03_Q7cD1gE1udJrTVQwCY2qc0yhNcGK_M5c5KpzrbPUJabF1i_OXg&oe=678BBA17" width="150" height="200"/>
+    <img
+      src="https://instagram.ftun14-1.fna.fbcdn.net/v/t1.15752-9/466830003_2871089346387624_2459145612872455531_n.png?stp=dst-png_s640x640&_nc_cat=108&ccb=1-7&_nc_sid=0024fc&_nc_ohc=y8gna7B1PCAQ7kNvgFtBg7H&_nc_zt=23&_nc_ht=instagram.ftun14-1.fna&oh=03_Q7cD1gE1udJrTVQwCY2qc0yhNcGK_M5c5KpzrbPUJabF1i_OXg&oe=678BBA17"
+      width="150"
+      height="200"
+    />
     <br />
-    Not gonna lie  i really dont have a favorite song it only depends on my mood but if i was obliged to listen to only one for now it would  be feel this moment by pitbull it s kind of nostalgic
-    <ul><li>Now here is my E-mail:yassinebelkaid123@gmail.com</li>
-       <br /><label for="notes">E mail</label>
+    Not gonna lie i really dont have a favorite song it only depends on my mood
+    but if i was obliged to listen to only one for now it would be feel this
+    moment by pitbull it s kind of nostalgic
+    <ul>
+      <li>Now here is my E-mail:yassinebelkaid123@gmail.com</li>
+      <br /><label for="notes">E mail</label>
       <input type="text" id="EMAIL" value="" />
       <label for="nom">name</label>
-    <input type="text" id="name" value="" />
-    
-        <button type="submit">send</button>
-    </ul>
+      <input type="text" id="name" value="" />
 
+      <button type="submit">send</button>
+    </ul>
   </body>
 </html>
